# networking-odl

./: .coveragerc  .gitignore  .gitreview  .mailmap  .pylintrc  .stestr.conf  .testr.conf  CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  README.rst  TESTING.rst  bindep.txt  constraints.txt  lower-constraints.txt  openstack-common.conf  requirements.txt  setup.cfg  tempest-blacklist.txt  test-requirements.txt  tox.ini
.zuul.d/: jobs.yaml  project.yaml
devstack/: README.rst  devstackgaterc  entry_points  functions  jetty-legacy.patch  local.conf.example  override-defaults  plugin.sh  post_test_hook.sh  pre_test_hook.sh  release.helium-0.2.3-SR3  release.helium-snapshot  release.lithium-snapshot-0.3.0  settings  settings.odl  setup_java.sh
devstack/files/debs/: networking-odl
devstack/files/rpms/: networking-odl
devstack/odl-releases/: README.rst  beryllium-0.4.0  beryllium-0.4.1-SR1  beryllium-0.4.2-SR2  beryllium-0.4.3-SR3  beryllium-0.4.4-SR4  beryllium-snapshot-0.4.0  beryllium-snapshot-0.4.1  beryllium-snapshot-0.4.2  beryllium-snapshot-0.4.3  beryllium-snapshot-0.4.4  beryllium-snapshot-0.4.5  boron-0.5.0  boron-0.5.1-SR1  boron-snapshot-0.5.0  boron-snapshot-0.5.1  boron-snapshot-0.5.2  carbon-latest  carbon-snapshot-0.6.0  common  helium-0.2.3-SR3  helium-snapshot  lithium-0.3.1-SR1  lithium-0.3.2-SR2  lithium-0.3.3-SR3  lithium-0.3.4-SR4  lithium-snapshot-0.3.0  lithium-snapshot-0.3.1  lithium-snapshot-0.3.2  lithium-snapshot-0.3.3  lithium-snapshot-0.3.4  lithium-snapshot-0.3.5  nitrogen-latest
devstack/upgrade/: settings  upgrade.sh
doc/: requirements.txt
doc/source/: conf.py  features.rst  index.rst  installation.rst  odl-networking-sfc-driver.md  reference_architecture.rst  specs.rst
doc/source/admin/: index.rst
doc/source/configuration/: index.rst
doc/source/contributor/: drivers_architecture.rst  hostconfig.rst  index.rst  maintenance.rst  quickstart.rst  usage.rst
doc/source/devref/: drivers_architecture.rst  hostconfig.rst  index.rst  maintenance.rst  quickstart.rst  testing.rst
doc/source/install/: devstack.rst  index.rst  installation.rst
doc/source/reference/: index.rst  newton.rst  ocata.rst  pike.rst
doc/source/specs/: dep-validations-on-create.rst  journal-recovery.rst  neutron-port-dhcp.rst  qos-driver.rst  sfc-driver.rst
networking_odl/: __init__.py  _i18n.py
networking_odl/bgpvpn/: odl_v2.py
networking_odl/cmd/: analyze_journal.py  set_ovs_hostconfigs.py  test_setup_hostconfig.sh
networking_odl/common/: _i18n.py  auth.py  cache.py  callback.py  client.py  config.py  constants.py  exceptions.py  filters.py  journal.py  lightweight_testing.py  odl_features.py  postcommit.py  utils.py  websocket_client.py
networking_odl/db/: db.py  head.py  models.py
networking_odl/dhcp/: odl_dhcp_driver.py  odl_dhcp_driver_base.py
networking_odl/fwaas/: driver.py
networking_odl/hacking/: checks.py
networking_odl/journal/: base_driver.py  cleanup.py  dependency_validations.py  full_sync.py  journal.py  maintenance.py  periodic_task.py  recovery.py  worker.py
networking_odl/l2gateway/: driver.py  driver_v2.py
networking_odl/l3/: l3_flavor.py  l3_odl.py  l3_odl_v2.py
networking_odl/lbaas/: driver.py  driver_v1.py  driver_v2.py  lbaasv2_driver_v2.py
networking_odl/ml2/: legacy_port_binding.py  mech_driver.py  mech_driver_v2.py  network_topology.py  ovsdb_topology.py  port_binding.py  port_status_update.py  pseudo_agentdb_binding.py  vpp_topology.py
networking_odl/qos/: qos_driver.py  qos_driver_v2.py  qos_utils.py
networking_odl/sfc/: sfc_driver_v1.py  sfc_driver_v2.py
networking_odl/tests/: base.py  match.py
networking_odl/trunk/: constants.py  trunk_driver_v1.py  trunk_driver_v2.py
playbooks/devstack/: pre.yaml
playbooks/fullstack/: post.yaml  pre.yaml
playbooks/functional/: pre.yaml
playbooks/tempest/: post.yaml  pre.yaml  run.yaml
rally-jobs/: README.rst  odl.yaml
rally-jobs/plugins/: README.rst
releasenotes/notes/: add-analyze-journal-cmd-189eae2cac4d60a5.yaml  add-beryllium-sr4-7eced33ec292bcc8.yaml  add-host-config-8fb45d7f9732a795.yaml  bgpvpn-driver-v2-36c0772d510587f4.yaml  bgpvpn-vni-support-0804d0c0789cd1db.yaml  delete-completed-rows-immediately-d3aee2ff5278b3f4.yaml  deprecate-qos-driver-v1-96bce9842413700b.yaml  deprecate-v1-0dd4f07c68a4a0a4.yaml  deprecate_ceilometer-0d2830fa1fc6ba4e.yaml  devstack-default-driver-v2-6ae6ce789b4a6cc9.yaml  drop-py27-support-3bc8094e1823cfcf.yaml  fix-sfc-full-sync-4eafe97d27b8b33e.yaml  fix-sfcv2-urlpath-f339357bed1a538c.yaml  fix-tls-websocket-3bee50093c3e90cf.yaml  fix-ws-ssl-timeout-e16cd41779c05d42.yaml  flat-network-support-7c032aabc21902b1.yaml  full-sync-f6b7ec1bd9ea0e52.yaml  functional-test-b0855d6f1d85da30.yaml  ignore_agent_aliveness-935a1aa8c285dfa2.yaml  journal-recovery-88e583ad2db22bcc.yaml  l2gw-driver-v2-b32aacf882ed446c.yaml  lbaas-driver-v2-46bf34992f4785d1.yaml  maintenance-thread-e54c3b4bd7c03546.yaml  make-ceilometer-dependency-optional-fb0407dd2d367599.yaml  make_sync_timeout_float-490072005e3f3413.yaml  network-statistics-from-opendaylight-057a6b3c30626527.yaml  neutron-dhcp-port-dcbc3a1008f45cc2.yaml  new-netvirt-default-0eccc77d3cb54484.yaml  nuke-lbaasv1-driver-fce366522350fe21.yaml  odl-feature-negotiation-ece3201a6e9f8f74.yaml  odl-l3-flavor-f093e6c0fb4e9dd8.yaml  odl_features-option-type-change-367385ae7d1e949e.yaml  ovs_hardware_offload_support-38d2b0b7386b8ca7.yaml  port-binding-default-b5f24ad350b47eb0.yaml  pseudo-agent-port-binding-0a3d1d193b99293e.yaml  qos-driver-v1-711698186ca693c4.yaml  qos-driver-v2-4c869a6f0b8e3a4d.yaml  remove-network-topology-67daff08f3d6ff14.yaml  remove-neutron-lbaas-6afe0b0f7b61290a.yaml  remove-v1-driver-df408f9916fc5e5d.yaml  (+8 more)
releasenotes/source/: conf.py  index.rst
roles/show-odl-info/: README.rst
tools/: check_i18n.py  coding-checks.sh  configure_for_func_testing.sh  i18n_cfg.py  install_venv.py  tox_install.sh  tox_install_project.sh
vagrant/: README.rst  setup_proxy.sh
vagrant/functional/: Vagrantfile  config-override.sh  reproduce.sh  setup-minimum.sh
(+167 files in other folders)
