[metadata]
name = networking-odl
summary = OpenStack Networking
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/networking-odl/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    networking_odl
data_files =
    etc/neutron =
        etc/neutron/plugins/ml2/ml2_conf_odl.ini

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
# NOTE(asomya): The V2 ML2 driver and service_plugin is experimental and only
# for testing and evaluation purposes. Once the driver/service_plugin has been
# proven to be reliable, the current driver/service_plugin will be replaced by
# the V2 versions. Please take care to only specify a single version of the ML2
# driver and service_plugin in the configuration files. Mix-matching between
# different versions of the ML2 drivers/service_plugins will cause a lot of
# issues in your environment.
#
# Allowed configuration settings:
#
# [ml2]
# mechanism_drivers = opendaylight
# [DEFAULT]
# service_plugins = odl-router
#
# OR
#
# [ml2]
# mechanism_drivers = opendaylight_v2
# [DEFAULT]
# service_plugins = odl-router_v2
console_scripts =
    neutron-odl-ovs-hostconfig = networking_odl.cmd.set_ovs_hostconfigs:main
    neutron-odl-analyze-journal-logs = networking_odl.cmd.analyze_journal:main
neutron.ml2.mechanism_drivers =
    opendaylight = networking_odl.ml2.mech_driver:OpenDaylightMechanismDriver
    opendaylight_v2 = networking_odl.ml2.mech_driver_v2:OpenDaylightMechanismDriver
neutron.service_plugins =
    odl-router = networking_odl.l3.l3_odl:OpenDaylightL3RouterPlugin
    odl-router_v2 = networking_odl.l3.l3_odl_v2:OpenDaylightL3RouterPlugin
neutron.db.alembic_migrations =
    networking-odl = networking_odl.db.migration:alembic_migrations
networking_odl.ml2.port_binding_controllers =
    legacy-port-binding = networking_odl.ml2.legacy_port_binding:LegacyPortBindingManager
    pseudo-agentdb-binding = networking_odl.ml2.pseudo_agentdb_binding:PseudoAgentDBBindingController
oslo.config.opts =
    ml2_odl = networking_odl.common.config:list_opts
networking_sfc.sfc.drivers =
    odl = networking_odl.sfc.sfc_driver_v1:OpenDaylightSFCDriverV1
    odl_v2 = networking_odl.sfc.sfc_driver_v2:OpenDaylightSFCDriverV2
networking_sfc.flowclassifier.drivers =
    odl = networking_odl.sfc.flowclassifier.sfc_flowclassifier_v1:OpenDaylightSFCFlowClassifierDriverV1
    odl_v2 = networking_odl.sfc.flowclassifier.sfc_flowclassifier_v2:OpenDaylightSFCFlowClassifierDriverV2
network.statistics.drivers =
    opendaylight.v2 = networking_odl.ceilometer.network.statistics.opendaylight_v2.driver:OpenDaylightDriver

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[build_releasenotes]
build-dir = releasenotes/build
source-dir = releasenotes/source
all_files = 1

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_odl/locale/networking-odl.pot

[compile_catalog]
directory = networking_odl/locale
domain = networking-odl

[update_catalog]
domain = networking-odl
output_dir = networking_odl/locale
input_file = networking_odl/locale/networking-odl.pot

[wheel]
universal = 1
